--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,18 @@
 
     function fetchAll() {
       let TestDataClass = ncmb.DataStore(db);
-      TestDataClass.order("name",false).fetchAll()
+      TestDataClass.order("name", false).fetchAll()
+        .then(function(results) {
+          showResults(results);
+        })
+    }
+
+    function searchName() {
+      let name = $("#name").val();
+      let TestDataClass = ncmb.DataStore(db);
+      TestDataClass
+        .equalTo("name", name)
+        .fetchAll()
         .then(function(results) {
           showResults(results);
         })
@@ -54,6 +65,7 @@
   </div>
   <div id="button">
     <button class="btn" onclick="fetchAll()">Fetch All</button>
+    <button class="btn" onclick="searchName()">Name</button>
   </div>
   <div id="message">message area</div>
 </body>
